--- a/MyFirstMovieApp/Content/bootstrap.css
+++ b/MyFirstMovieApp/Content/bootstrap.css
@@ -220,8 +220,10 @@ textarea {
 }
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    background-color: darkseagreen;
+    border-color: #080808;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 @media print {
@@ -4025,7 +4027,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   z-index: 1000;
-  min-height: 50px;
+  min-height: 100px; /*picture height*/
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -4193,7 +4195,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-brand {
   float: left;
-  padding: 15px 15px;
+  padding: 45px 15px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -4273,15 +4275,15 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 @media (min-width: 768px) {
   .navbar-nav {
-    float: left;
+    float: right;
     margin: 0;
   }
   .navbar-nav > li {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 45px;
+    padding-bottom: 0px;
   }
 }
 
@@ -4501,12 +4503,15 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+    /*background-color: darkseagreen;*/
+    background-image: url(../img/filmKiss1.jpg);
+        background-position: center;
+    border-color: #080808;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #999999;
+    font-size: 4.2vw;
+  color: darkseagreen;
 }
 
 .navbar-inverse .navbar-brand:hover,
@@ -4520,7 +4525,9 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: darkblue;
+  font-size: 4.2vw;
+  text-align: right;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
