--- a/MyFirstMovieApp/Views/Shared/_Layout.cshtml
+++ b/MyFirstMovieApp/Views/Shared/_Layout.cshtml
@@ -16,22 +16,31 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @*Welcome to !MoviePhone*@
+                @Html.ActionLink("!MoviePhone Database", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("About", "About")</li>
+
+                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
             </div>
         </div>
     </div>
+
     <div class="container body-content">
+        @*<script type="text/javascript">
+            var randombgs = ["../img/filmKiss1.jpg", "../img/filmKiss2.jpg", "../img/filmKiss3.jpg",]
+            document.body.style.background = 'green url(' + Math.floor(Math.random() * randombgs.length)]+')')
+        </script>*@
+
+
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - ilona's ASP.NET Application</p>
         </footer>
     </div>
 
